# pon-chat

./: .clang-format  CMakeLists.txt  create_new_module.sh
client/: CMakeLists.txt
client/inc/: global_room_ui.h  test.hpp
client/src/: global_room_ui.cc  main.cc  main.cpp  test.cpp
libs/: CMakeLists.txt
server/: CMakeLists.txt
server/inc/: global_room.h  test.hpp
server/src/: global_room.cc  main.cc  main.cpp  test.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: global_room.cc  global_room.h  global_room_ui.cc  global_room_ui.h  main.cc
src/console_input/: CMakeLists.txt
src/console_input/include/pon-chat/console_input/: console_input.h
src/console_input/src/: console_input.cc  console_input_impl.h
src/events/: CMakeLists.txt
src/events/include/pon-chat/events/: events.h
src/events/src/: events.cc  events_impl.h
src/flags/: CMakeLists.txt
src/flags/include/pon-chat/flags/: flags.h
src/flags/src/: flags.cc  flags_impl.h
src/protocols/: CMakeLists.txt
src/protocols/include/pon-chat/protocols/: global_room_protocol.h
src/protocols/src/: global_room_protocol.cc
src/server/: CMakeLists.txt
src/server/src/: global_room.cc  global_room.h  main.cc
src/signals/: CMakeLists.txt
src/signals/include/pon-chat/signals/: signals.h
src/signals/src/: signals.cc
src/ui/: CMakeLists.txt
src/ui/include/pon-chat/ui/: global_room_console_ui.h  global_room_graphical_ui.h  global_room_ui.h
src/ui/src/: global_room_console_ui.cc  global_room_graphical_ui.cc  global_room_ui.cc
src/utils/: CMakeLists.txt
src/utils/include/pon-chat/utils/: console_input.h  global_room_protocol.h  signals.h
src/utils/src/: console_input.cc  console_input_impl.h  global_room_protocol.cc  signals.cc
templates/template_app_module/: CMakeLists.txt
templates/template_lib_module/: CMakeLists.txt
utils/: CMakeLists.txt
utils/inc/: console_input.h  global_room_protocol.h
utils/src/: console_input.cc  console_input_impl.h  global_room_protocol.cc  signals.cc
